force-app/main/default/objects/Lead.object
<CustomObject>

<fields>
    <fullName>CurrentGenerators__c</fullName>
    <label>Current Generator(s)</label>
    <length>100</length>
    <type>Text</type>
</fields>

<fields>
    <fullName>NumberofLocations__c</fullName>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</fields>

<fields>
    <fullName>Primary__c</fullName>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <label>No</label>
                <valueName>No</valueName>
            </value>
            <value>
                <label>Yes</label>
                <valueName>Yes</valueName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>

<fields>
    <fullName>ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <label>GC1000 series</label>
                <valueName>GC1000 series</valueName>
            </value>
            <value>
                <label>GC5000 series</label>
                <valueName>GC5000 series</valueName>
            </value>
            <value>
                <label>GC3000 series</label>
                <valueName>GC3000 series</valueName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>

<fields>
    <fullName>SICCode__c</fullName>
    <label>SIC Code</label>
    <length>15</length>
    <type>Text</type>
</fields>
</CustomObject>